stderr
JudgeMan.java:28: error: cannot find symbol
                    pairStack++;
                    ^
  symbol:   variable pairStack
  location: class JudgeMan
JudgeMan.java:32: error: incompatible types: int[] cannot be converted to boolean
        if(intArray){
           ^
2 errors
